Add MyGateway logo next to DTU's

--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@
     <!-- /. Content -->
 
     <footer>
-      <img src="img/dtulogo.png" />
+      <div class='flex justify-center'>
+        <img src="img/mgw-logo.png" class='w-48' />
+        <img src="img/dtulogo.png" />
+      </div>
 
       <p>© DTU 2022 </p>
 
