Add Freshdesk link

--- a/index.html
+++ b/index.html
@@ -337,6 +337,14 @@
 
   <!--[if lt IE 10]><script type="text/javascript" src="js/placeholder.js"></script><![endif]-->
   <script type="module" src="/src/main.jsx"></script>
+
+  <script>
+    window.fwSettings={
+    'widget_id':150000000091
+    };
+    !function(){if("function"!=typeof window.FreshworksWidget){var n=function(){n.q.push(arguments)};n.q=[],window.FreshworksWidget=n}}() 
+  </script>
+  <script type='text/javascript' src='https://widget.freshworks.com/widgets/150000000091.js' async defer></script>
 </body>
 
 </html>
