--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <link rel="apple-touch-icon" sizes="57x57" href="favicon-standard-iphone.png">
 
   <!-- ============== Resources style ============== -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="public/css/style.css" />
 
   <!-- Modernizr runs quickly on page load to detect features -->
-  <script src="js/modernizr.custom.js"></script>
+  <script src="public/js/modernizr.custom.js"></script>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
   <section id="left-side">
 
     <!-- Your logo -->
-    <img src="img/logo.png" alt="" class="brand-logo" />
+    <img src="public/img/logo.png" alt="" class="brand-logo" />
 
     <div class="content">
       <h1 class="text-intro opacity-0">
@@ -146,8 +146,8 @@
 
     <footer>
       <div class='flex justify-center'>
-        <img src="img/mgw-logo.png" class='w-48' />
-        <img src="img/dtulogo.png" />
+        <img src="public/img/mgw-logo.png" class='w-48' />
+        <img src="public/img/dtulogo.png" />
       </div>
 
       <p>© DTU 2022 </p>
@@ -294,46 +294,46 @@
   <!-- \\\\\\\\\\\\\\\\\\\/////////////////// -->
 
   <!-- * Libraries jQuery, Easing and Bootstrap - Be careful to not remove them * -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.easings.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="public/js/jquery.min.js"></script>
+  <script src="public/js/jquery.easings.min.js"></script>
+  <script src="public/js/bootstrap.min.js"></script>
 
   <!-- PhotoSwipe Core JS file -->
-  <script src="js/velocity.min.js"></script>
+  <script src="public/js/velocity.min.js"></script>
 
   <!-- PhotoSwipe UI JS file -->
-  <script src="js/velocity.ui.min.js"></script>
+  <script src="public/js/velocity.ui.min.js"></script>
 
   <!-- Newsletter plugin -->
-  <script src="js/notifyMe.js"></script>
+  <script src="public/js/notifyMe.js"></script>
 
   <!-- Contact form plugin -->
-  <script src="js/contact-me.js"></script>
+  <script src="public/js/contact-me.js"></script>
 
   <!-- Slideshow/Image plugin -->
-  <script src="js/vegas-youtube-mobile.js"></script>
+  <script src="public/js/vegas-youtube-mobile.js"></script>
 
   <!-- YouTube plugin -->
-  <script src="js/jquery.mb.YTPlayer.js"></script>
+  <script src="public/js/jquery.mb.YTPlayer.js"></script>
 
   <!-- Scroll plugin -->
-  <script src="js/jquery.mousewheel.js"></script>
+  <script src="public/js/jquery.mousewheel.js"></script>
 
   <!-- Custom Scrollbar plugin -->
-  <script src="js/jquery.mCustomScrollbar.js"></script>
+  <script src="public/js/jquery.mCustomScrollbar.js"></script>
 
   <!-- Popup Newsletter Form -->
-  <script src="js/classie.js"></script>
-  <script src="js/dialogFx.js"></script>
+  <script src="public/js/classie.js"></script>
+  <script src="public/js/dialogFx.js"></script>
 
   <!-- PhotoSwipe Core JS file -->
-  <script src="js/photoswipe.js"></script>
+  <script src="public/js/photoswipe.js"></script>
 
   <!-- PhotoSwipe UI JS file -->
-  <script src="js/photoswipe-ui-default.js"></script>
+  <script src="public/js/photoswipe-ui-default.js"></script>
 
   <!-- Main JS File -->
-  <script src="js/main.js"></script>
+  <script src="public/js/main.js"></script>
 
   <!--[if lt IE 10]><script type="text/javascript" src="js/placeholder.js"></script><![endif]-->
   <script type="module" src="/src/main.jsx"></script>
