Update some text; change DTU logo to Coat of Arms

--- a/index.html
+++ b/index.html
@@ -46,23 +46,28 @@
 
     <div class="content">
       <h1 class="text-intro opacity-0">
-        Hi There!<br>
-        Welcome to The Bahamas
+        Welcome to The Islands of The Bahamas
       </h1>
 
       <h2 class="text-intro opacity-0">
-        Skip the line blah blah
+        Complete and submit your digital immigration form for entry.
       </h2>
 
       <nav>
         <ul>
           <li>
-            <a href="#" id="open-more-info" data-target="right-side"
-              class="light-btn text-intro opacity-0">IMMIGRATION
-              CARD</a>
+            <a
+              id="open-more-info"
+              href="#"
+              class="light-btn text-intro opacity-0"
+              data-target="right-side"
+            >IMMIGRATION CARD</a>
           </li>
           <li>
-            <a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">MORE HELP</a>
+            <a
+              class="action-btn trigger text-intro opacity-0"
+              data-dialog="somedialog"
+            >MORE HELP</a>
           </li>
         </ul>
       </nav>
@@ -146,11 +151,11 @@
 
     <footer>
       <div class='flex justify-center'>
-        <img src="img/mgw-logo.png" class='w-48' />
+        <img src="img/coat-of-arms.png" class='w-40 mr-8' />
         <img src="img/dtulogo.png" />
       </div>
 
-      <p>© DTU 2022 </p>
+      <p class="mt-8">© DTU 2022 </p>
 
     </footer>
 
