Add Language Picker component

--- a/index.html
+++ b/index.html
@@ -55,26 +55,21 @@
         Complete and submit your digital immigration form for entry.
       </h2>
 
-      <nav>
-        <ul>
-          <li>
-            <a
-              id="open-more-info"
-              href="#"
-              class="light-btn text-intro opacity-0"
-              data-target="right-side"
-            >IMMIGRATION CARD</a>
-          </li>
-          <li>
-            <a
-              id="open-help"
-              class="action-btn trigger text-intro opacity-0"
-              data-dialog="somedialog"
-            >MORE HELP</a>
-          </li>
-        </ul>
+      <nav class="flex flex-row">
+        <a
+          id="open-more-info"
+          href="#"
+          class="light-btn text-intro opacity-0"
+          data-target="right-side"
+        >IMMIGRATION CARD</a>
+        <a
+          id="open-help"
+          class="action-btn trigger text-intro opacity-0"
+          data-dialog="somedialog"
+        >MORE HELP</a>
       </nav>
 
+      <div id="language-select-container"></div>
     </div>
 
     <!-- Social icons -->
