Add lang meta tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="The description should optimally be between 150-160 characters.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Madeon08">
+  <meta name='lang' content='en-us' />
 
   <!-- ================= Favicon ================== -->
   <!-- Standard -->
@@ -30,7 +31,7 @@
 <body>
   <!-- YouTube link -->
   <a id="bgndVideo" class="player"
-    data-property="{videoURL:'https://www.youtube.com/watch?v=ziMPH85ANlY',containment:'body',autoPlay:true, mute:true, startAt:0, stopAt:0, opacity:1}"></a>
+    data-property="{videoURL:'https://www.youtube.com/watch?v=ky6UMOLm2ns',containment:'body',autoPlay:true, mute:true, startAt:0, stopAt:0, opacity:1}"></a>
 
   <!-- Overlay and Star effect -->
   <div class="global-overlay">
@@ -46,16 +47,16 @@
 
     <div class="content">
       <h1 class="text-intro opacity-0">
-        Welcome to The Islands of The Bahamas
+        Welcome to The Bahamas
         <br />
-        Government of The Bahamas Immigration Arrival Card
+        Immigration Arrival Card
       </h1>
 
       <h2 class="text-intro opacity-0">
         Complete and submit your digital immigration form for entry.
       </h2>
 
-      <nav class="flex flex-row">
+      <nav class="flex flex-row flex-wrap">
         <a
           id="open-more-info"
           href="#"
